--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_personal_info_address.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_personal_info_address.xml
@@ -3,7 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <include
-        android:id="@+id/address_list"
+        android:id="@+id/address_include"
         layout="@layout/activity_top_bar" />
     <RelativeLayout
         android:layout_alignParentBottom="true"
@@ -20,16 +20,16 @@
             android:text="新增收货地址"
             android:textColor="#ffffff"/>
     </RelativeLayout>
-    <ListView
-        android:id="@+id/lv_add_address_list"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/address_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/address_list"
+        android:layout_below="@id/address_include"
         android:layout_above="@id/rl_add_address"
         android:dividerHeight="5dp"
         android:cacheColorHint="#00000000"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"></ListView>
+        android:layout_marginRight="10dp"></android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
