--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_personal_info_mydata_edit.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_personal_info_mydata_edit.xml
@@ -3,7 +3,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <include layout="@layout/activity_top_bar"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#0e932e"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/ib_personal_info_back_edit"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/dis_add_bt"
+            android:src="@drawable/ic_back_light"/>
+
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:background="#00000000"/>
+
+        <FrameLayout
+            android:id="@+id/fl_personal_info_edit"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_weight="1.5">
+            <TextView
+                android:id="@+id/tv_personal_info_edit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="保存"
+                android:textColor="#ffffff"/>
+
+        </FrameLayout>
+    </LinearLayout>
 
     <View
         android:id="@+id/view_info_mydata_one"
@@ -27,12 +62,12 @@
                 style="@style/RlInfoStyle">
 
                 <TextView
-                    android:id="@+id/tv_info_mydata_name"
+                    android:id="@+id/tv_info_mydata_name_edit"
                     style="@style/tv_personal_info_address"
                     android:text="用户名："/>
 
                 <EditText
-                    android:id="@+id/et_info_mydata_name"
+                    android:id="@+id/et_info_mydata_name_edit"
                     style="@style/et_personal_info_address"
                     android:layout_toRightOf="@id/tv_info_mydata_name"
                     android:hint="请输入用户名称"/>
@@ -44,12 +79,12 @@
                 style="@style/RlInfoStyle">
 
                 <TextView
-                    android:id="@+id/tv_info_mydata_nickname"
+                    android:id="@+id/tv_info_mydata_nickname_edit"
                     style="@style/tv_personal_info_address"
                     android:text="昵称："/>
 
                 <EditText
-                    android:id="@+id/et_info_mydata_nickname"
+                    android:id="@+id/et_info_mydata_nickname_edit"
                     style="@style/et_personal_info_address"
                     android:layout_toRightOf="@id/tv_info_mydata_nickname"
                     android:hint="请输入用户名称"/>
@@ -61,7 +96,7 @@
                 style="@style/RlInfoStyle">
 
                 <TextView
-                    android:id="@+id/tv_info_mydata_sex"
+                    android:id="@+id/tv_info_mydata_sex_edit"
                     style="@style/tv_personal_info_address"
                     android:text="性别："/>
 
@@ -83,7 +118,6 @@
                             android:layout_width="70dp"
                             android:layout_height="wrap_content"
                             android:button="@null"
-                            android:checked="true"
                             android:drawableRight="@android:drawable/btn_radio"
                             android:paddingLeft="13dp"
                             android:text="男" />
@@ -93,6 +127,7 @@
                             android:layout_width="70dp"
                             android:layout_height="wrap_content"
                             android:button="@null"
+                            android:checked="true"
                             android:paddingLeft="13dp"
                             android:drawableRight="@android:drawable/btn_radio"
                             android:text="女" />
@@ -115,55 +150,56 @@
                 style="@style/RlInfoStyle">
 
                 <TextView
-                    android:id="@+id/tv_info_mydata_birthdate"
+                    android:id="@+id/tv_info_mydata_birthdate_edit"
                     style="@style/tv_personal_info_address"
-                    android:text="出生日期："/>
+                    android:text="年龄："/>
 
                 <EditText
-                    android:id="@+id/et_info_mydata_birthdate"
+                    android:id="@+id/et_info_mydata_birthdate_edit"
                     style="@style/et_personal_info_address"
                     android:layout_toRightOf="@id/tv_info_mydata_birthdate"
-                    android:hint="请输入用户名称"/>
+                    android:hint="请输入用户名称"
+                    android:inputType="number"/>
             </RelativeLayout>
 
-            <View
-                style="@style/view_small"/>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:background="#ffffff"
-                android:layout_gravity="center_vertical">
+            <!--<View-->
+                <!--style="@style/view_small"/>-->
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="120dp"-->
+                <!--android:background="#ffffff"-->
+                <!--android:layout_gravity="center_vertical">-->
 
-                <TextView
-                    android:id="@+id/tv_info_mydata_img"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginStart="20dp"
-                    android:text="我的头像："
-                    android:textColor="#444444"
-                    android:textSize="20sp"
-                    android:gravity="center_vertical"/>
-                <ImageView
-                    android:id="@+id/iv_info_mydata_showimg"
-                    android:layout_width="140dp"
-                    android:layout_height="120dp"
-                    android:layout_toRightOf="@id/tv_info_mydata_img"
-                    android:src="@drawable/personal_info_bg"/>
-                <ImageButton
-                    android:id="@+id/ib_personal_info_mydata_addimg"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_toRightOf="@id/iv_info_mydata_showimg"
-                    android:src="@drawable/ic_personal_info_mydata_addimg"
-                    android:background="#ffffff"/>
-            </RelativeLayout>
+                <!--<TextView-->
+                    <!--android:id="@+id/tv_info_mydata_img"-->
+                    <!--android:layout_width="120dp"-->
+                    <!--android:layout_height="120dp"-->
+                    <!--android:layout_alignParentLeft="true"-->
+                    <!--android:layout_alignParentStart="true"-->
+                    <!--android:layout_marginLeft="20dp"-->
+                    <!--android:layout_marginStart="20dp"-->
+                    <!--android:text="我的头像："-->
+                    <!--android:textColor="#444444"-->
+                    <!--android:textSize="20sp"-->
+                    <!--android:gravity="center_vertical"/>-->
+                <!--<ImageView-->
+                    <!--android:id="@+id/iv_info_mydata_showimg"-->
+                    <!--android:layout_width="140dp"-->
+                    <!--android:layout_height="120dp"-->
+                    <!--android:layout_toRightOf="@id/tv_info_mydata_img"-->
+                    <!--android:src="@drawable/personal_info_bg"/>-->
+                <!--<ImageButton-->
+                    <!--android:id="@+id/ib_personal_info_mydata_addimg"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="100dp"-->
+                    <!--android:layout_marginTop="15dp"-->
+                    <!--android:layout_marginBottom="15dp"-->
+                    <!--android:layout_marginLeft="5dp"-->
+                    <!--android:layout_marginRight="5dp"-->
+                    <!--android:layout_toRightOf="@id/iv_info_mydata_showimg"-->
+                    <!--android:src="@drawable/ic_personal_info_mydata_addimg"-->
+                    <!--android:background="#ffffff"/>-->
+            <!--</RelativeLayout>-->
 
             <View
                 style="@style/view_big"/>
@@ -171,12 +207,12 @@
                 style="@style/RlInfoStyle">
 
                 <TextView
-                    android:id="@+id/tv_info_mydata_email"
+                    android:id="@+id/tv_info_mydata_email_edit"
                     style="@style/tv_personal_info_address"
                     android:text="email："/>
 
                 <EditText
-                    android:id="@+id/et_info_mydata_email"
+                    android:id="@+id/et_info_mydata_email_edit"
                     style="@style/et_personal_info_address"
                     android:layout_toRightOf="@id/tv_info_mydata_email"
                     android:hint="请输入用户名称"
@@ -189,12 +225,12 @@
                 style="@style/RlInfoStyle">
 
                 <TextView
-                    android:id="@+id/tv_info_mydata_phone"
+                    android:id="@+id/tv_info_mydata_phone_edit"
                     style="@style/tv_personal_info_address"
                     android:text="手机号码："/>
 
                 <EditText
-                    android:id="@+id/et_info_mydata_phone"
+                    android:id="@+id/et_info_mydata_phone_edit"
                     style="@style/et_personal_info_address"
                     android:layout_toRightOf="@id/tv_info_mydata_phone"
                     android:hint="请输入用户名称"
@@ -207,12 +243,12 @@
                 style="@style/RlInfoStyle">
 
                 <TextView
-                    android:id="@+id/tv_info_mydata_qq"
+                    android:id="@+id/tv_info_mydata_qq_edit"
                     style="@style/tv_personal_info_address"
                     android:text="qq号码："/>
 
                 <EditText
-                    android:id="@+id/et_info_mydata_qq"
+                    android:id="@+id/et_info_mydata_qq_edit"
                     style="@style/et_personal_info_address"
                     android:layout_toRightOf="@id/tv_info_mydata_qq"
                     android:hint="请输入用户名称"
