--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_personal.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_personal.xml
@@ -1,12 +1,371 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:roundimg="http://schemas.android.com/apk/com.qianjiaia.kitchen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#e1e4e5"
+                android:clipToPadding="true"
+                android:fitsSystemWindows="true">
 
-    <TextView
+    <RelativeLayout
+        android:id="@+id/rl_personal_info_headImg"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="@drawable/personal_info_bg"
+        android:clipToPadding="true"
+        android:fitsSystemWindows="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#00000000"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/dis_add_bt"/>
+
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="6"
+                android:background="#00000000"/>
+
+            <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1.5">
+            </FrameLayout>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_personal_info_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true">
+
+            <com.jiajiaqian.kitchen.utils.CircleImageView
+                android:id="@+id/ib_personal_info_head_img"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:background="#00000000"
+                android:src="@drawable/ic_user_default"
+                roundimg:border_inside_color="#e7e7d2"
+                roundimg:border_outside_color="#e7e7d2"
+                roundimg:border_thickness="1dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_personal_info_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ib_personal_info_head_img"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="吃饭吃饭"
+                android:textSize="16sp"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rl_line"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/rl_personal_info_img"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:id="@+id/iv_line"
+                android:layout_width="5dp"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/ic_personal_terval_line_new"/>
+
+            <RelativeLayout
+                android:id="@+id/rl_left"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_toLeftOf="@id/iv_line">
+
+                <ImageView
+                    android:id="@+id/iv_rl_left"
+                    android:layout_width="5dp"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/ic_personal_terval_line_new"/>
+
+                <TextView
+                    android:id="@+id/tv_nopay_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@id/iv_rl_left"
+                    android:gravity="center"
+                    android:text="4"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/tv_nopay_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_nopay_number"
+                    android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@id/iv_rl_left"
+                    android:gravity="center"
+                    android:text="未付款"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/tv_nosend_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@id/iv_rl_left"
+                    android:gravity="center"
+                    android:text="4"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/tv_nosend_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_nosend_number"
+                    android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@id/iv_rl_left"
+                    android:gravity="center"
+                    android:text="未发货"
+                    android:textSize="18sp"/>
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_right"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@id/iv_line">
+
+                <ImageView
+                    android:id="@+id/iv_rl_right"
+                    android:layout_width="5dp"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/ic_personal_terval_line_new"/>
+
+                <TextView
+                    android:id="@+id/tv_send_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@id/iv_rl_right"
+                    android:gravity="center"
+                    android:text="4"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/tv_send_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_send_number"
+                    android:layout_marginTop="5dp"
+                    android:layout_toLeftOf="@id/iv_rl_right"
+                    android:gravity="center"
+                    android:text="已发货"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/tv_noevaluate_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@id/iv_rl_right"
+                    android:gravity="center"
+                    android:text="4"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/tv_noevaluate_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_noevaluate_number"
+                    android:layout_marginTop="5dp"
+                    android:layout_toRightOf="@id/iv_rl_right"
+                    android:gravity="center"
+                    android:text="未评价"
+                    android:textSize="18sp"/>
+
+            </RelativeLayout>
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <View
+        android:id="@+id/view_info_one"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_below="@id/rl_personal_info_headImg"
+        android:background="#ffffff"/>
+
+    <View
+        android:id="@+id/view_info_two"
+        style="@style/view_big"
+        android:layout_below="@id/view_info_one"/>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="personal a"
-        android:gravity="center"/>
+        android:layout_below="@id/view_info_two">
 
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                style="@style/RlInfoStyle">
+
+                <ImageView
+                    android:id="@+id/iv_info_order"
+                    style="@style/iv_info_xx"
+                    android:src="@drawable/ic_personal_info_order"/>
+
+                <TextView
+                    android:id="@+id/tv_info_order"
+                    style="@style/tv_info_xx"
+                    android:layout_toRightOf="@id/iv_info_order"
+                    android:text="我的订单"/>
+
+                <ImageButton
+                    android:id="@+id/ib_info_order"
+                    style="@style/PersonalInfoMoreStyle"
+                    android:src="@drawable/ic_personal_info_more"/>
+            </RelativeLayout>
+
+            <View
+                style="@style/view_big"/>
+
+            <RelativeLayout
+                style="@style/RlInfoStyle">
+
+                <ImageView
+                    android:id="@+id/iv_info_mydata"
+                    style="@style/iv_info_xx"
+                    android:src="@drawable/ic_personal_info_mydata"/>
+
+                <TextView
+                    android:id="@+id/tv_info_mydata"
+                    style="@style/tv_info_xx"
+                    android:layout_toRightOf="@id/iv_info_mydata"
+                    android:text="我的资料"/>
+
+                <ImageButton
+                    android:id="@+id/ib_info_mydata"
+                    style="@style/PersonalInfoMoreStyle"
+                    android:src="@drawable/ic_personal_info_more"/>
+            </RelativeLayout>
+
+            <View
+                style="@style/view_small"/>
+
+            <RelativeLayout
+                style="@style/RlInfoStyle">
+
+                <ImageView
+                    android:id="@+id/iv_info_address"
+                    style="@style/iv_info_xx"
+                    android:src="@drawable/ic_personal_info_address"/>
+
+                <TextView
+                    android:id="@+id/tv_info_address"
+                    style="@style/tv_info_xx"
+                    android:layout_toRightOf="@id/iv_info_address"
+                    android:text="收货地址"/>
+
+                <ImageButton
+                    android:id="@+id/ib_info_address"
+                    style="@style/PersonalInfoMoreStyle"
+                    android:src="@drawable/ic_personal_info_more"/>
+            </RelativeLayout>
+
+            <View
+                style="@style/view_small"/>
+
+            <RelativeLayout
+                style="@style/RlInfoStyle">
+
+                <ImageView
+                    android:id="@+id/iv_info_relation"
+                    style="@style/iv_info_xx"
+                    android:src="@drawable/ic_personal_info_relation"/>
+
+                <TextView
+                    android:id="@+id/tv_info_relation"
+                    style="@style/tv_info_xx"
+                    android:layout_toRightOf="@id/iv_info_relation"
+                    android:text="联系客服"/>
+
+                <ImageButton
+                    android:id="@+id/ib_info_relation"
+                    style="@style/PersonalInfoMoreStyle"
+                    android:src="@drawable/ic_personal_info_more"/>
+            </RelativeLayout>
+
+            <View
+                style="@style/view_big"/>
+
+            <RelativeLayout
+                style="@style/RlInfoStyle">
+
+                <ImageView
+                    android:id="@+id/iv_info_setting"
+                    style="@style/iv_info_xx"
+                    android:src="@drawable/ic_personal_info_setting"/>
+
+                <TextView
+                    android:id="@+id/tv_info_setting"
+                    style="@style/tv_info_xx"
+                    android:layout_toRightOf="@id/iv_info_setting"
+                    android:text="设置"/>
+
+                <!--<ImageButton-->
+                    <!--android:id="@+id/ib_info_setting"-->
+                    <!--style="@style/PersonalInfoMoreStyle"-->
+                    <!--android:src="@drawable/ic_personal_info_more"/>-->
+            </RelativeLayout>
+
+            <View
+                style="@style/view_big"/>
+
+            <RelativeLayout
+                style="@style/RlInfoStyle">
+
+                <ImageView
+                    android:id="@+id/iv_info_power"
+                    style="@style/iv_info_xx"
+                    android:src="@drawable/ic_personal_info_power"/>
+
+                <TextView
+                    android:id="@+id/tv_info_power"
+                    style="@style/tv_info_xx"
+                    android:layout_toRightOf="@id/iv_info_power"
+                    android:text="电源"/>
+
+                <!--<ImageButton-->
+                    <!--android:id="@+id/ib_info_power"-->
+                    <!--style="@style/PersonalInfoMoreStyle"-->
+                    <!--android:src="@drawable/ic_personal_info_more"/>-->
+            </RelativeLayout>
+
+            <View
+                style="@style/view_big"/>
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
